tests/baselines/reference/argumentsObjectIterator03_ES5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
argumentsObjectIterator03_ES5.ts(2,9): error TS2802: Type 'IArguments' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== argumentsObjectIterator03_ES5.ts (1 errors) ====
    function asReversedTuple(a: number, b: string, c: boolean): [boolean, string, number] {
        let [x, y, z] = arguments;
            ~~~~~~~~~
!!! error TS2802: Type 'IArguments' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.
        
        return [z, y, x];
    }
    
    